applications/request-authentication.yaml
apiVersion: security.istio.io/v1
kind: RequestAuthentication
metadata:
    name: "jwt-authentication"
    namespace: development
spec:
    selector:
        matchLabels:
            app: test-service-1
    jwtRules:
        -   issuer: "authorization-service"
            jwks: |
                {
                    "kty": "EC",
                    "use": "enc",
                    "key_ops": [
                        "sign",
                        "verify",
                        "encrypt",
                        "decrypt",
                        "wrapKey",
                        "unwrapKey",
                        "deriveKey",
                        "deriveBits"
                    ],
                    "alg": "EdDSA",
                    "kid": "ed38eddc-f056-4ed0-89b5-6081ad816139",
                    "crv": "P-256",
                    "x": "G9fAbe1g7xJpTDZWpD43wtWLA29tHIMKTMf1Mp68Hn8",
                    "y": "0gNrtSO2TIaeW3moyZ0CPhc7cQJhyEMQqBx4IrUH-1M"
                }
