applications/api-gateway.yaml
---
apiVersion: gateway.networking.k8s.io/v1beta1
kind: Gateway
metadata:
    name: api-gateway
    labels:
        app: api-gateway
        version: v1
        app.kubernetes.io/name: api-gateway
        app.kubernetes.io/version: v1
        sidecar.istio.io/inject: "true"
spec:
    gatewayClassName: istio
    listeners:
        -   name: http
            port: 80
            protocol: HTTP
            allowedRoutes:
                namespaces:
                    from: All
