applications/server-filter.yaml
apiVersion: networking.istio.io/v1alpha3
kind: EnvoyFilter
metadata:
    name: response-remove-headers-filter
    namespace: istio-system
spec:
    # workloadSelector:
    #     labels:
    #         istio: ingressgateway
    configPatches:
        -   applyTo: HTTP_FILTER
            match:
                context: GATEWAY
                listener:
                    filterChain:
                        filter:
                            name: "envoy.filters.network.http_connection_manager"
                            subFilter:
                                name: "envoy.filters.http.router"
            patch:
                operation: INSERT_BEFORE
                value:
                    name: envoy.lua
                    typed_config:
                        "@type": "type.googleapis.com/envoy.extensions.filters.http.lua.v3.Lua"
                        inlineCode: |
                            function envoy_on_response(response_handle)
                              response_handle:headers():remove("x-envoy-upstream-service-time")
                              response_handle:headers():remove("server")
                            end
