applications/server-passthrough-filter.yaml
apiVersion: networking.istio.io/v1alpha3
kind: EnvoyFilter
metadata:
    name: response-server-passthrough-filter
    namespace: istio-system
spec:
    # workloadSelector:
    #     labels:
    #         istio: ingressgateway
    configPatches:
        -   applyTo: NETWORK_FILTER
            match:
                context: GATEWAY
                listener:
                    filterChain:
                        filter:
                            name: "envoy.filters.network.http_connection_manager"
            patch:
                operation: MERGE
                value:
                    typed_config:
                        "@type": "type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager"
                        server_header_transformation: PASS_THROUGH
